# DCAE

./: .gitignore  CONTRIBUTING.md  ENHANCED_README.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_MODE_TDD_SUMMARY.md  LICENSE  MassGen + BMAD + Superpower Draft.md  OPEN_SOURCE_RELEASE.md  README-MVP.md  README.md  README_CN.md  SECURITY.md  USAGE.md  conflict_detection_test_report.md  dcae-mvp.py  dcae.py  demo_log_error_reporting.py  enhanced_dcae.py  final-project-retrospective.md  mvp-assessment.md  pyproject.toml  refined-documentation.md  requirements.txt  run_uat_tests.py  run_uat_tests_corrected.py  sample-workflow.yaml  setup.cfg  setup.py  task-management-requirements.txt  test_export_functionality.py  test_functionality.py  test_interactive_mode_functionality.py  test_performance_functionality.py  test_review_rules_functionality.py  uat-summary-report.md  uat-test-plan.md  validate_task_system.py
.claude/: settings.local.json
.dcae/: config.yaml  discipline_settings.json  indicators.json  providers.json
_bmad-output/: project-context.md  sprint-status.yaml
_bmad-output/implementation-artifacts/: 1-1-project-initialization.md  1-10-log-error-reporting.md  1-2-project-configuration.md  1-3-start-bmad-workflow.md  1-4-pause-resume-project.md  1-5-manage-multiple-projects.md  1-6-global-settings-config.md  1-8-performance-statistics-summary.md  1-8-performance-statistics.md  1-9-update-settings.md  (+63 more)
config/: review_rules_config.yaml
dcae-core/: DEPLOYMENT_GUIDE.md  INSTALL.sh  README.md  pyproject.toml
dcae-core/dcae/: __init__.py  cli.py  core.py
dcae-core/dcae/phases/: __init__.py
dcae-core/dcae/utils/: __init__.py
dcae-core/tests/: __init__.py  test_core.py
dcae-mcp/: README.md  pyproject.toml
dcae-mcp/dcae_mcp/: __init__.py  server.py
dcae-poc/: .gitignore  QUICKSTART.md  README.md  config-china.yaml  config-qwen.yaml  config.yaml  demo_stats.py  pyproject.toml  run_workflow.py
dcae-poc/examples/: domain_knowledge_demo.py
dcae-poc/scripts/: validate_qwen_coding_plan.py
dcae-poc/skills/: brainstorming.yaml  code_review.yaml  coding-plan.yaml  cost-aware.yaml  tdd.yaml
dcae-poc/src/dcae/: __init__.py  agent.py  cli.py  config.py  consensus.py  core.py  models.py  skill.py  storage.py  templates.py
dcae-poc/src/dcae/gui/: README.md  dashboard_app.py  requirements.txt
dcae-poc/src/dcae/knowledge/: __init__.py  cross_domain.py  cross_domain_api_documentation.md  input_handler.py  test_cross_domain.py  test_knowledge.py  validator.py
dcae-poc/src/dcae/stats/: __init__.py  collector.py  dashboard.py  exporter.py  integration.py  models.py  storage.py  ui.py
dcae-poc/tests/: __init__.py  test_config.py  test_models.py  test_simple_skills.py  test_skills.py  test_stats.py  test_storage.py
dcae-poc/workflows/: coding-plan.yaml  qwen-test.yaml  simple-coding-plan.yaml  skill-test.yaml  user_login.yaml
docs/: best_practices.md  constraint_handling_guide.md  dcae_best_practices_guide.md
examples/: performance_statistics_demo.py
src/: dcae_cli.py  dcae_init.py  requirements_conflict_detector.py  test_performance_func.py
templates/: best_practices_extension_template.py  best_practices_template.md
test_req_project/: README.md  dcae-config.yaml  requirements.yaml
tests/: enhanced_interactive_tests.py  integration_test.py  tdd_test_runner.py  test_architecture_components.py  test_architecture_generation.py  test_architecture_patterns_consistency.py  test_architecture_validation_review.py  test_basic_framework_generator.py  test_best_practices_reflector_integration.py  test_bmad_workflow.py  test_business_logic_generator.py  test_clear_prompts_integration.py  test_clear_prompts_user_input.py  test_code_structure_generator.py  test_comparison_verifier.py  test_compliance_tracker.py  test_comprehensive_generated_output_review.py  test_discipline_controller.py  test_epic1_project_setup.py  test_epic4_complete.py  test_epic4_integration.py  test_epic6_integration.py  test_epic7_integration.py  test_epic8_advanced.py  test_epic8_basic.py  test_epic8_cli.py  test_epic8_integration.py  test_epic8_real_world.py  test_epic9_basic.py  test_epic9_best_practices_reflector.py  test_epic9_cross_domain_recommender.py  test_epic9_domain_manager.py  test_epic9_project_learning_system.py  test_generated_output_review.py  test_global_settings_config.py  test_identify_code_issues.py  test_initialization.py  test_integrated_review_mechanism.py  test_integration_conflict_detector.py  test_interactive_mode.py  (+29 more)
(+106 files in other folders)
