[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dcae-framework"
dynamic = ["version"]
description = "Disciplined Consensus-Driven Agentic Engineering Framework"
readme = "README.md"
authors = [{name = "DCAE Development Team", email = "dcae@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "jinja2>=3.1.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pytest",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-rtd-theme"
]

[project.scripts]
dcae = "dcae_cli:main"

[project.urls]
Homepage = "https://github.com/dcae/dcae-framework"
"Bug Reports" = "https://github.com/dcae/dcae-framework/issues"
Source = "https://github.com/dcae/dcae-framework/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "dcae.__version__"}