[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcae"
version = "1.0.0"
description = "DCAE (Design-Code-Analyze-Evolve) framework for TDD-driven development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenClaw Community", email = "openclaw@example.com"}
]
keywords = ["tdd", "testing", "development", "agile", "quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
dcae = "dcae.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dcae"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=dcae --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
