[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcae-mcp"
version = "1.0.0"
description = "DCAE MCP Server - Model Context Protocol server for DCAE TDD framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenClaw Community", email = "openclaw@example.com"}
]
keywords = ["mcp", "dcae", "tdd", "testing", "claude", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "dcae>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dcae_mcp"]
